<resources>
    <string name="app_name">Battery Status</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="submit">Submit</string>
    <string name="clear">Clear</string>
    <string name="alert_confirm">Confirm</string>
    <string name="alert_cancel">Cancel</string>

    <string name="battery_name">Battery Name</string>
    <string name="activity_save">Save</string>
    <string name="activity_filter">Filter</string>
    <string name="activity_delete">Delete</string>
    <string name="activity_edit">Edit</string>
    <string name="activity_search">Search</string>
    <string name="activity_details">Details</string>
    <string name="activity_archive">Archive</string>
    <string name="battery_cell">Number of Cells</string>
    <string name="battery_mah">Milliamp Hours</string>
    <string name="title_activity_create_entry">CreateEntry</string>
    <string name="title_activity_create_battery">create_battery</string>
    <string name="battery_cycles">Number of Cycles</string>
    <string name="battery_type">Battery Type</string>
    <string name="title_activity_remove_entry">RemoveEntry</string>
    <string name="title_activity_archive_battery">ArchiveBattery</string>
    <string name="title_activity_view_statistics">ViewStatistics</string>
    <string name="search_hint">Search</string>
    <string name="title_activity_battery_statistics">BatteryStatistics</string>
    <string name="sign_up"><u>Sign up!</u></string>
    <string name="answer_security_questions"><b>Please verify you are the account owner</b></string>
    <string name="done">Done</string>

    <array name="battery_type">
        <item>LiPo</item>
        <item>NiMh</item>
        <item>NiCd</item>
        <item>LiFe</item>
    </array>
    <string-array name="cell_number">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>

    <string-array name="MAH">
        <item>0</item>
        <item>1000</item>
        <item>2000</item>
        <item>3000</item>
        <item>4000</item>
        <item>5000</item>
        <item>6000</item>
        <item>7000</item>
        <item>8000</item>
        <item>9000</item>
        <item>10000</item>
    </string-array>

    <string-array name="securityQuestions">
        <item>Recovery Question</item>
        <item>What was your favorite place to visit as a child?</item>
        <item>Who is your favorite actor, musician, or artist?</item>
        <item>What is the name of your favorite pet?</item>
        <item>In what city were you born?</item>
        <item>What high school did you attend?</item>
        <item>What is the name of your first school?</item>
        <item>What is your favorite movie?</item>
        <item>What is your mother\'s maiden name?</item>
        <item>What street did you grow up on?</item>
        <item>What was the make of your first car?</item>
        <item>When is your anniversary?</item>
        <item>What is your favorite color?</item>
        <item>What is your father\'s middle name?</item>
        <item>What is the name of your first grade teacher?</item>
        <item>What was your high school mascot?</item>
        <item>Which is your favorite web browser?</item>
    </string-array>

    <string name="title_activity_edit_battery">EditBattery</string>

    <string-array name="tabs">
        <item>Basic</item>
        <item>Graph</item>
    </string-array>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register_account">Register Account</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
</resources>
