<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.parrish.test.EditBattery">
    <item android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/activity_search"
        android:showAsAction="always"
        android:orderInCategory="0"
        android:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/action_edit"
        android:icon="@mipmap/ic_edit_black"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/activity_edit" />
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
</menu>
