<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.parrish.test.ArchiveBattery">
    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/activity_search"
        android:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/action_archive"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/activity_archive"
        android:background="?android:selectableItemBackground"
        android:actionLayout="@layout/menu_delete_button"/>
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
</menu>
