<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.parrish.test.ViewStatistics">
    <item android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:title="@string/activity_search"
        android:showAsAction="always"
        android:orderInCategory="0"
        android:actionViewClass="android.widget.SearchView"/>
    <item
        android:id="@+id/action_filter"
        android:icon="@mipmap/ic_filter"
        android:orderInCategory="1"
        android:showAsAction="ifRoom"
        android:title="@string/activity_filter" />
<!--    <item
        android:id="@+id/action_search"
        android:icon="@mipmap/ic_search"
        android:orderInCategory="0"
        android:showAsAction="ifRoom"
        android:title="@string/activity_search" />-->
    <!--<item-->
        <!--android:id="@+id/action_details"-->
        <!--android:icon="@mipmap/ic_details"-->
        <!--android:orderInCategory="2"-->
        <!--android:showAsAction="ifRoom"-->
        <!--android:title="@string/activity_details" />-->
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/action_settings" />
</menu>
