<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:id="@+id/viewCreateBattery"
    tools:context="com.example.parrish.test.CreateBattery">

    <!--< android:id="@+id/view" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="CREATE BATTERY"
        android:id="@+id/title"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:gravity="center_horizontal"
        android:textColor="#ffffff"
        android:background="#ff34495e"
        android:layout_alignParentStart="true"
        android:paddingTop="5dp"
        android:paddingBottom="5dp" />

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:id="@+id/scrollView"
        android:layout_below="@+id/title"
        android:padding="24dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:minHeight="450dp"
            android:measureWithLargestChild="false"
            android:weightSum=".8">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1">

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/battery_name"-->
                    <!--android:id="@+id/lblBattery"-->
                    <!--android:inputType="none"-->
                    <!--android:labelFor="@+id/txtBatteryName"-->
                    <!--android:layout_below="@+id/title"-->
                    <!--android:layout_alignParentStart="true"-->
                    <!--android:textSize="20sp" />-->

                <!--<EditText-->
                <!--<com.rey.material.widget.EditText-->
                    <!--android:layout_width="fill_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/txtBatteryName"-->
                    <!--android:textColor="#FF000000"-->
                    <!--android:layout_alignParentEnd="true"-->
                    <!--android:layout_toEndOf="@+id/lblCell"-->
                    <!--android:layout_above="@+id/lblCell"-->
                    <!--android:layout_alignTop="@+id/lblBattery"-->
                    <!--android:textSize="20sp"-->
                    <!--android:inputType="textMultiLine"-->
                    <!--android:hint="Battery Name"-->
                    <!--app:et_inputId="@+id/textfield_et_char_counter_input"-->
                    <!--app:et_supportMode="charCounter"-->
                    <!--app:et_supportMaxChars="20" />-->

                <com.rey.material.widget.EditText
                    style="@style/Material.Widget.EditText.Light"
                    android:id="@+id/txtBatteryName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="#FF000000"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:inputType="text"
                    android:textSize="20sp"
                    android:hint="Battery Name"
                    app:et_inputId="@+id/txtBatteryName_input"
                    app:et_labelTextColor="#8d030303"
                    app:et_supportMode="charCounter"
                    app:et_supportMaxChars="16"
                    app:et_supportTextErrorColor="#FFFF0000"
                    app:et_dividerErrorColor="#FFFF0000" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1"
                android:gravity="center_vertical"
                android:paddingBottom="20dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_cell"
                    android:id="@+id/lblCell"
                    android:layout_below="@+id/lblBattery"
                    android:layout_alignParentStart="true"
                    android:inputType="none"
                    android:labelFor="@+id/ddlCells"
                    android:textSize="20sp" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/ddlCells"
                    android:layout_alignBottom="@+id/lblCell"
                    android:layout_toEndOf="@+id/lblCell"
                    android:scrollbarSize="30dp"
                    android:dropDownWidth="40dp"
                    android:layout_gravity="center"
                    android:gravity="bottom" />
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1">

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:text="@string/battery_mah"-->
                    <!--android:id="@+id/lblMah"-->
                    <!--android:inputType="none"-->
                    <!--android:labelFor="@+id/txtMah"-->
                    <!--android:layout_alignParentStart="true"-->
                    <!--android:layout_below="@+id/lblCell"-->
                    <!--android:textSize="20sp"-->
                    <!--android:gravity="center_vertical" />-->

                <!--<EditText-->
                    <!--android:layout_width="80dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:inputType="number"-->
                    <!--android:ems="10"-->
                    <!--android:id="@+id/txtMah"-->
                    <!--android:layout_alignTop="@+id/lblMah"-->
                    <!--android:layout_toEndOf="@+id/lblCell"-->
                    <!--android:textSize="20sp"-->
                    <!--android:gravity="bottom" />-->
                <com.rey.material.widget.EditText
                    style="@style/Material.Widget.EditText.Light"
                    android:id="@+id/txtMah"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="#FF000000"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:hint="@string/battery_mah"
                    app:et_inputId="@+id/txtMah_input"
                    app:et_labelTextColor="#8d030303"
                    app:et_supportMode="charCounter"
                    app:et_supportMaxChars="5"
                    app:et_supportTextErrorColor="#FFFF0000"
                    app:et_dividerErrorColor="#FFFF0000"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1">

                <!--<TextView-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:id="@+id/lblCycles"-->
                    <!--android:text="@string/battery_cycles"-->
                    <!--android:layout_centerVertical="true"-->
                    <!--android:layout_alignParentStart="true"-->
                    <!--android:textSize="20sp" />-->

                <!--<EditText-->
                    <!--android:layout_width="80dp"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:inputType="number"-->
                    <!--android:ems="10"-->
                    <!--android:id="@+id/txtCycles"-->
                    <!--android:layout_alignTop="@+id/lblCycles"-->
                    <!--android:layout_alignStart="@+id/txtMah"-->
                    <!--android:textSize="20sp"-->
                    <!--android:gravity="bottom" />-->
                <com.rey.material.widget.EditText
                    style="@style/Material.Widget.EditText.Light"
                    android:id="@+id/txtCycles"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:textColor="#FF000000"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Body1"
                    android:inputType="number"
                    android:textSize="20sp"
                    android:hint="@string/battery_cycles"
                    app:et_inputId="@+id/txtCycles_input"
                    app:et_labelTextColor="#8d030303"
                    app:et_supportMode="charCounter"
                    app:et_supportMaxChars="4"
                    app:et_supportTextErrorColor="#FFFF0000"
                    app:et_dividerErrorColor="#FFFF0000"/>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight=".1"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/battery_type"
                    android:id="@+id/lblType"
                    android:layout_below="@+id/txtCycles"
                    android:layout_alignParentStart="true"
                    android:textSize="20sp"
                    android:gravity="center_vertical" />

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="fill_parent"
                    android:id="@+id/ddlType"
                    android:layout_alignBottom="@+id/lblType"
                    android:layout_toEndOf="@+id/lblCell"
                    android:scrollbarSize="20sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
